kube/deployment.yml
# Web server deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: loyalty-app
  name: loyalty-web-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: loyalty-app
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 50%
  template:
    metadata:
      labels:
        app: loyalty-app
    spec:
      containers:
        - env:
            - name: RAILS_MASTER_KEY
              valueFrom:
                secretKeyRef:
                  name: rails-secrets
                  key: rails_master_key
          image: gcarvalhof/barber-loyalty-inf-016:0.0.2
          name: loyalty-web-service
          command: ["bin/rails"]
          args: ["server", "-b", "0.0.0.0"]
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: .5
              memory: 1Gi
          stdin: true
          tty: true
      restartPolicy: Always
