kube/loyalty-service.yml
# Web server deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: loyalty-app
  name: loyalty-web-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: loyalty-app
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 50%
  template:
    metadata:
      labels:
        app: loyalty-app
    spec:
      containers:
      - env:
          - name: RAILS_MASTER_KEY
            valueFrom:
              secretKeyRef:
                name: rails-secrets
                key: rails_master_key
          - name: USERNAME
            value: barber-loyalty
          - name: PASSWORD
            value: password
          - name: HOSTNAME
            value: loyalty-db-service
          - name: DB_PORT
            value: "5432"
          - name: DB_NAME
            value: barber-loyalty-dev
        image: barber-loyalty-inf-016:latest # gcarvalhof/barber-loyalty-inf-016:0.0.2
        name: loyalty-web
        ports:
          - containerPort: 3000
        resources:
          requests:
            cpu: "500m"
            memory: 1Gi
        stdin: true
        tty: true
      restartPolicy: Always
---
# Loyalty program Rails Service Declaration
apiVersion: v1
kind: Service
metadata:
  labels:
    app: loyalty-app
  name: loyalty-app-service
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 123
      targetPort: 3000
  selector:
    app: loyalty-app

---
# PostgreSQL Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loyalty-db-deployment
  labels:
    app: loyalty-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: loyalty-db
  template:
    metadata:
      labels:
        app: loyalty-db
    spec:
      containers:
      - name: postgres
        image: postgres:15.5-alpine
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: postgres-data
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: postgres-data
        persistentVolumeClaim:
          claimName: loyalty-db-pvc

---
# PostgreSQL Service
apiVersion: v1
kind: Service
metadata:
  name: loyalty-db-service
  labels:
    app: loyalty-db
spec:
  type: ClusterIP
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    app: loyalty-db
