kube/services.yml
# Loyalty program Rails Service Declaration
apiVersion: v1
kind: Service
metadata:
  labels:
    app: loyalty-app
  name: loyalty-app-service
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 123
      targetPort: 3000
  selector:
    app: loyalty-app
