kube/gateway.yml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: Gateway
metadata:
  name: my-app-gateway
  namespace: default
spec:
  gatewayClassName: nginx
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    routes:
      kind: HTTPRoute
      namespaces:
        from: All
      selector:
        matchLabels:
          gateway: my-app-gateway
