kube/httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: echo
  annotations:
    konghq.com/strip-path: 'true'
spec:
  parentRefs:
  - name: kong
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /loyalty
    backendRefs:
    - name: loyalty-app-service
      kind: Service
      port: 123
  - matches:
    - path:
        type: PathPrefix
        value: /rating
    backendRefs:
    - name: rating-app-service
      kind: Service
      port: 124
